--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app {
-	height: 100vh;
 	background-image: linear-gradient(to right, #051421, #042727);
+	max-width: 100vw;
+	box-sizing: border-box;
 }
 
 .app::-webkit-scrollbar {
